# hw_drf

./: .env-sample  README.md  coverage.report  data.json  pyproject.toml
config/: .env.sample  __init__.py  celery.py  settings.py  urls.py
docs/: urls.py
lms/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_preview.py  0003_alter_course_preview.py  0004_course_owner_lesson_owner.py  0005_courssubscriber.py  0006_rename_courssubscriber_coursesubscriber.py
lms/templates/lms/: base.html
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_method.py  0004_alter_payment_method.py  0005_payment_link_payment_session_id.py  0006_alter_payment_method.py
users/templates/users/: login.html  reset_password.html  reset_password_success.html  user_form.html  user_list.html
